2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Re-add is_notation_usable() to interface.
	* scorerender-utils.php (transform_paths):
	- Handle the case when setting is a MIDI program.
	
2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (search_path) Removed, functionality merged into search_prog().
	- (search_prog) New func, also searches user specified paths.
	* wp-scorerender.php (scorerender_get_def_settings),
	  scorerender-class.php (define_setting_value),
	  notation/lilypond.php (define_setting_value):
	- Use search_prog() globally.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php, wp-scorerender.php:
	- Use WP hook and static methods to register notation data
	  instead of adding directly to global variable.
	- (register_notation_data) New func.
	* scorerender-class.php:
	- Add register_notation_data() to Interface method.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* notation/{abc,mup,pmw}.php, scorerender-class.php:
	- (is_notation_usable, define_setting_value) Move common code
	  to parent class.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php:
	- Start moving notation data into class.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php, scorerender.php:
	- Clean up variable names and debugging.
	* scorerender.php (get_notation_name):
	- Don't need to lowercase class name anymore on PHP5.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (set_midi_program) New func.
	* wp-scorerender.php, scorerender-admin.php:
	- Add PRODUCE_MIDI setting and checkbox.
	* wp-scorerender.php:
	- (scorerender_shortcode_handler) Only call set_programs() for image
	  rendering programs.
	- (scorerender_parse_shortcode) Don't disable certain notation if
	  midi program is missing.
	* notation/{abc,lilypond,mup,pmw}.php:
	- (is_notation_usable, define_setting_value) Make them
	  more generic, allows possibility to unify them.