@@ -16,10 +16,11 @@
 	along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-function exit_and_dump_error ($string, $status)
+function exit_and_dump_error ($string, $httpstatus)
 {
 	error_log ('ScoreRender (tint-image.php): ' . $string . "\n");
-	exit ($status);
+	header ( 'x', true, $httpstatus);
+	exit (1);
 }
 
 // this file must be either 3 or 4 levels from WP top dir
@@ -28,47 +29,54 @@ if (file_exists ('../../../../wp-config.php'))
 elseif (file_exists ('../../../wp-config.php'))
 	require_once ('../../../wp-config.php');
 else
-	exit_and_dump_error ("Failed to locate config", 1);
+	exit_and_dump_error ("Failed to locate config", 204);
 
 if ( !function_exists ('get_option') )
-	exit_and_dump_error ("Crucial Wordpress function not found", 2);
+	exit_and_dump_error ("Crucial Wordpress function not found", 204);
 
 $settings = get_option ('scorerender_options');
 if ( empty ($settings) )
-	exit_and_dump_error ("Failed to retrieve WP config", 2);
+	exit_and_dump_error ("Failed to retrieve WP config", 204);
 
 if ( array_key_exists ('color', $_GET) )
 	$hexcolor = strtoupper (urldecode ($_GET['color']));
 else
 {
 	if ( !array_key_exists ('NOTE_COLOR', $settings) )
-		exit_and_dump_error ("Can't determine color from config", 3);
+		exit_and_dump_error ("Can't determine color from config", 204);
 	$hexcolor = strtoupper ($settings['NOTE_COLOR']);
 }
 
 if ( !preg_match ('/^#?([0-9A-F]{6})$/', $hexcolor) )
-	exit_and_dump_error ("Incorrect color format: '$hexcolor''", 4);
+	exit_and_dump_error ("Incorrect color format: '$hexcolor''", 204);
 $color = hexdec ($hexcolor);
 
 if ( !array_key_exists ('img', $_GET) )
-	exit_and_dump_error ("Image name not supplied", 5);
+	exit_and_dump_error ("Image name not supplied", 204);
 
 if ( !preg_match ('/^sr-\w+-[0-9A-Fa-f]{32}\.png$/', $_GET['img']) )
-	exit_and_dump_error ("Image name format incorrect", 6);
+	exit_and_dump_error ("Image name format incorrect", 204);
 
-$file = '';
 if ( !empty ($settings['CACHE_DIR']) )
-{
 	$file = $settings['CACHE_DIR'] . '/' . $_GET['img'];
-	if ( !file_exists ($file) )
-		exit_and_dump_error ("Image not found: '$file''", 7);
-}
 else
 {
 	$upload_dir = wp_upload_dir();
 	$file = $upload_dir['basedir'] . '/' . $_GET['img'];
-	if ( !file_exists ($file) )
-		exit_and_dump_error ("Image not found: '$file''", 7);
+}
+if ( !file_exists ($file) )
+	exit_and_dump_error ("Image not found: '$file''", 404);
+
+if ( !is_readable ($file) )
+	exit_and_dump_error ("Image not readable: '$file''", 403);
+
+// short circuit for better caching
+// TODO: check etag too
+$mtime = filemtime ( $file );
+if ( @strtotime ( $_SERVER['HTTP_IF_MODIFIED_SINCE'] ) == $mtime )
+{
+	header ( 'x', true, 304 );
+	exit (0);
 }
 
 function convertcolor ( $img, $color )
@@ -93,14 +101,18 @@ function convertcolor ( $img, $color )
 
 $img = imagecreatefrompng ($file);
 if ( !is_resource ($img) )
-	exit_and_dump_error ("Failed to create image resource", 8);
+	exit_and_dump_error ("Failed to create image resource", 204);
 
 
 imagealphablending ($img, false);
 imagesavealpha ($img, true);
 convertcolor ($img, $color);
 
-header ('Content-type: image/png');
+header ("Content-type: image/png");
+header ("Content-Transfer-Encoding: binary");
+header ("Cache-Control: public");
+// TODO: print etag header too
+header ("Last-modified: " . date ('D, d M Y H:i:s T', filemtime ($file)));
 imagepng ($img);
 imagedestroy ($img);
 ?>
